@@ -47,7 +47,7 @@ main (int argc, char **argv)
 
   if (argc >= 2)
     {
-      in = fopen (argv[1], "r");
+      in = grub_util_fopen (argv[1], "r");
       if (!in)
 	{
 	  fprintf (stderr, _("cannot open `%s': %s"),
@@ -60,7 +60,7 @@ main (int argc, char **argv)
 
   if (argc >= 3)
     {
-      out = fopen (argv[2], "w");
+      out = grub_util_fopen (argv[2], "w");
       if (!out)
 	{					
 	  if (in != stdin)
